[tool.poetry]
name = "testghactions"
version = "0.1.0"
description = ""
authors = ["valerie synenko <valerii.synenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
faker = "^38.2.0"
pytest = "^9.0.2"
allure-pytest = "^2.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
